k8s/kustomization/apps/overlays/telcolab/netsentinel/deployment-sleep-infinity.patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: netsentinel
  namespace: netsentinel
spec:
  template:
    spec:
      containers:
        - name: netsentinel
          command: ["sleep", "infinity"]
        - name: create-mock-data
          command: ["sleep", "infinity"]
        - name: process-mock-data
          command: ["sleep", "infinity"]
        - name: prediction-service
          command: ["sleep", "infinity"]
