k8s/kustomization/apps/overlays/telcolab/netsentinel/app-route.patch.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: netsentinel-route
spec:
  to:
    kind: Service
    name: telcolab-netsentinel-service
    weight: 100
